--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,13 @@ dependencies {
     kapt 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.google.code.gson:gson:2.8.1'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
+
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+
     testImplementation 'org.mockito:mockito-core:2.10.0'
     testImplementation 'org.robolectric:robolectric:3.5.1'
 }
